FIX: Fixed issue when scrollbar was displayed when modal is open

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -56,6 +56,11 @@ html {
 body {
 	color: var(--grey-400);
 }
+html {
+	&:has(> .hide-scrollbar) {
+		overflow: hidden;
+	}
+}
 
 .modules-gap-bottom {
 	margin-bottom: var(--modules-gap) !important;
